--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Ignore the secrets
-# /secrets
-# /src/secrets
+/secrets
+/src/secrets
 
 # Firebase hosting cache files
 .firebase/*
