moved app to app directory

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "build-start": "npm run build && npm run start"
+    "exe": "node dist/index.js",
+    "start": "npm run build && npm run exe"
   },
   "author": "moomoomamoo",
   "license": "ISC",
