--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 
       "declaration": true, /* Generates corresponding '.d.ts' file. */
       "sourceMap": true, /* Generates corresponding '.map' file. */
-      "outDir": "dist", /* Redirect output structure to the directory. */
+      "outDir": "app/dist", /* Redirect output structure to the directory. */
 
       "strict": true, /* Enable all strict type-checking options. */
       "noImplicitReturns": true,/* Firebase's default lint options make these pretty required */
