--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   "author": "moomoomamoo",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^7.12.0",
     "moment": "^2.24.0",
     "tmi.js": "^1.5.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/tmi.js": "^1.4.0",
     "dotenv": "^8.2.0",
     "rimraf": "^3.0.2",
