--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mr-saturn-server",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "The backend for the Mr Saturn project",
   "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
@@ -34,5 +34,8 @@
     "dotenv": "^8.2.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
