--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "mr-saturn-server",
   "version": "2.0.0",
   "description": "The backend for the Mr Saturn project",
-  "types": "dist/index.d.ts",
-  "typings": "dist/index.d.ts",
+  "types": "app/dist/index.d.ts",
+  "typings": "app/dist/index.d.ts",
   "main": "app/dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
